--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
     "next": "latest",
     "react": "^18.2.0",
